// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skeleton Loader should match snapshot of address skeleton loader 1`] = `
<View
  style={
    Array [
      Object {
        "borderBottomWidth": 1,
        "paddingBottom": 12,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 12,
      },
      Object {
        "backgroundColor": "rgba(255, 255, 255, 1)",
        "borderBottomColor": "rgba(245, 245, 245, 1)",
        "borderLeftColor": "rgba(245, 245, 245, 1)",
        "borderRightColor": "rgba(245, 245, 245, 1)",
        "borderTopColor": "rgba(245, 245, 245, 1)",
      },
    ]
  }
  testID="address_skeleton_loader"
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={35}
    bbWidth="100%"
    focusable={false}
    height={35}
    interval={0.25}
    meetOrSlice={1}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        Object {},
        Object {
          "flex": 0,
          "height": 35,
          "width": "100%",
        },
      ]
    }
    vbHeight={35}
    vbWidth={400}
    width="100%"
  >
    <RNSVGGroup>
      <RNSVGRect
        clipPath="address-animated-diff"
        fill={
          Array [
            1,
            "address-diff",
          ]
        }
        height="100%"
        propList={
          Array [
            "fill",
          ]
        }
        width="100%"
        x="0"
        y="0"
      />
      <RNSVGDefs>
        <RNSVGClipPath
          name="address-animated-diff"
        >
          <RNSVGCircle
            cx="35"
            cy="16"
            r="12"
          />
          <RNSVGRect
            height="20"
            rx="3"
            ry="3"
            width="280"
            x="60"
            y="5"
          />
        </RNSVGClipPath>
        <RNSVGLinearGradient
          gradient={
            Array [
              0,
              -1250325,
              0.5,
              -1,
              1,
              -1250325,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="address-diff"
          x1="-100%"
          x2="0%"
          y1={0}
          y2={0}
        />
      </RNSVGDefs>
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`Skeleton Loader should match snapshot of browse auction skeleton loader 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomLeftRadius": 4,
        "borderBottomRightRadius": 4,
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
        "justifyContent": "center",
        "marginBottom": 8,
        "paddingLeft": 8,
        "paddingRight": 8,
      },
      Object {
        "backgroundColor": "rgba(255, 255, 255, 1)",
        "borderBottomColor": "rgba(229, 229, 229, 1)",
        "borderBottomWidth": 1,
        "borderLeftColor": "rgba(229, 229, 229, 1)",
        "borderLeftWidth": 1,
        "borderRightColor": "rgba(229, 229, 229, 1)",
        "borderRightWidth": 1,
        "borderTopColor": "rgba(229, 229, 229, 1)",
        "borderTopWidth": 1,
      },
    ]
  }
  testID="browse_auctions_skeleton_loader"
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={186}
    bbWidth="100%"
    focusable={false}
    height={186}
    interval={0.25}
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        Object {},
        Object {
          "flex": 0,
          "height": 186,
          "width": "100%",
        },
      ]
    }
    vbHeight={186}
    vbWidth={400}
    width="100%"
  >
    <RNSVGGroup>
      <RNSVGRect
        clipPath="browseAuctions-animated-diff"
        fill={
          Array [
            1,
            "browseAuctions-diff",
          ]
        }
        height="100%"
        propList={
          Array [
            "fill",
          ]
        }
        width="100%"
        x="0"
        y="0"
      />
      <RNSVGDefs>
        <RNSVGClipPath
          name="browseAuctions-animated-diff"
        >
          <RNSVGCircle
            cx="21"
            cy="27"
            r="16"
          />
          <RNSVGRect
            height="26"
            rx="3"
            ry="3"
            width="120"
            x="46"
            y="12"
          />
          <RNSVGCircle
            cx="347"
            cy="21"
            r="8"
          />
          <RNSVGCircle
            cx="365"
            cy="21"
            r="8"
          />
          <RNSVGCircle
            cx="382"
            cy="21"
            r="8"
          />
          <RNSVGRect
            height="12"
            rx="3"
            ry="3"
            width="120"
            x="8"
            y="56"
          />
          <RNSVGRect
            height="12"
            rx="3"
            ry="3"
            width="110"
            x="282"
            y="56"
          />
          <RNSVGRect
            height="12"
            rx="3"
            ry="3"
            width="132"
            x="8"
            y="81"
          />
          <RNSVGRect
            height="12"
            rx="3"
            ry="3"
            width="118"
            x="272"
            y="81"
          />
          <RNSVGRect
            height="12"
            rx="3"
            ry="3"
            width="170"
            x="8"
            y="105"
          />
          <RNSVGRect
            height="12"
            rx="3"
            ry="3"
            width="140"
            x="252"
            y="105"
          />
          <RNSVGRect
            height="12"
            rx="3"
            ry="3"
            width="384"
            x="8"
            y="132"
          />
          <RNSVGRect
            height="20"
            rx="3"
            ry="3"
            width="100"
            x="8"
            y="162"
          />
          <RNSVGRect
            height="20"
            rx="3"
            ry="3"
            width="130"
            x="118"
            y="162"
          />
        </RNSVGClipPath>
        <RNSVGLinearGradient
          gradient={
            Array [
              0,
              -1250325,
              0.5,
              -1,
              1,
              -1250325,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="browseAuctions-diff"
          x1="-100%"
          x2="0%"
          y1={0}
          y2={0}
        />
      </RNSVGDefs>
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`Skeleton Loader should match snapshot of dex skeleton loader 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomLeftRadius": 4,
        "borderBottomRightRadius": 4,
        "borderBottomWidth": 1,
        "borderLeftWidth": 1,
        "borderRightWidth": 1,
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
        "borderTopWidth": 1,
        "justifyContent": "center",
        "marginBottom": 8,
        "paddingBottom": 16,
        "paddingTop": 16,
      },
      Object {
        "backgroundColor": "rgba(255, 255, 255, 1)",
        "borderBottomColor": "rgba(229, 229, 229, 1)",
        "borderLeftColor": "rgba(229, 229, 229, 1)",
        "borderRightColor": "rgba(229, 229, 229, 1)",
        "borderTopColor": "rgba(229, 229, 229, 1)",
      },
    ]
  }
  testID="dex_skeleton_loader"
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={156}
    bbWidth="100%"
    focusable={false}
    height={156}
    interval={0.25}
    meetOrSlice={1}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        Object {},
        Object {
          "flex": 0,
          "height": 156,
          "width": "100%",
        },
      ]
    }
    vbHeight={156}
    vbWidth={343}
    width="100%"
  >
    <RNSVGGroup>
      <RNSVGRect
        clipPath="dex-animated-diff"
        fill={
          Array [
            1,
            "dex-diff",
          ]
        }
        height="100%"
        propList={
          Array [
            "fill",
          ]
        }
        width="100%"
        x="0"
        y="0"
      />
      <RNSVGDefs>
        <RNSVGClipPath
          name="dex-animated-diff"
        >
          <RNSVGCircle
            cx="30"
            cy="19"
            r="12"
          />
          <RNSVGRect
            height="24"
            rx="4"
            ry="4"
            width="110"
            x="60"
            y="7"
          />
          <RNSVGRect
            height="28"
            rx="4"
            ry="4"
            width="100"
            x="228"
            y="5"
          />
          <RNSVGRect
            height="12"
            rx="4"
            ry="4"
            width="45"
            x="16"
            y="48"
          />
          <RNSVGCircle
            cx="25"
            cy="75"
            r="8"
          />
          <RNSVGRect
            height="14"
            rx="4"
            ry="4"
            width="150"
            x="38"
            y="68"
          />
          <RNSVGCircle
            cx="25"
            cy="95"
            r="8"
          />
          <RNSVGRect
            height="14"
            rx="4"
            ry="4"
            width="150"
            x="38"
            y="88"
          />
          <RNSVGRect
            height="32"
            rx="4"
            ry="4"
            width="68"
            x="16"
            y="118"
          />
          <RNSVGRect
            height="32"
            rx="4"
            ry="4"
            width="84"
            x="93"
            y="118"
          />
          <RNSVGRect
            height="32"
            rx="4"
            ry="4"
            width="81"
            x="245"
            y="118"
          />
        </RNSVGClipPath>
        <RNSVGLinearGradient
          gradient={
            Array [
              0,
              -1250325,
              0.5,
              -1,
              1,
              -1250325,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="dex-diff"
          x1="-100%"
          x2="0%"
          y1={0}
          y2={0}
        />
      </RNSVGDefs>
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`Skeleton Loader should match snapshot of loan skeleton loader 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
        "justifyContent": "space-around",
        "marginLeft": 8,
        "marginRight": 8,
        "marginTop": 8,
        "paddingBottom": 4,
        "paddingTop": 4,
      },
      Object {
        "backgroundColor": "rgba(245, 245, 245, 1)",
      },
    ]
  }
  testID="loan_skeleton_loader"
>
  <View
    style={
      Array [
        Array [
          Object {
            "borderBottomLeftRadius": 4,
            "borderBottomRightRadius": 4,
            "borderTopLeftRadius": 4,
            "borderTopRightRadius": 4,
          },
          Object {
            "flexBasis": "47%",
          },
        ],
        Object {
          "backgroundColor": "rgba(255, 255, 255, 1)",
          "borderBottomColor": "rgba(229, 229, 229, 1)",
          "borderBottomWidth": 1,
          "borderLeftColor": "rgba(229, 229, 229, 1)",
          "borderLeftWidth": 1,
          "borderRightColor": "rgba(229, 229, 229, 1)",
          "borderRightWidth": 1,
          "borderTopColor": "rgba(229, 229, 229, 1)",
          "borderTopWidth": 1,
        },
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={144}
      bbWidth="100%"
      focusable={false}
      height={144}
      interval={0.25}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {},
          Object {
            "flex": 0,
            "height": 144,
            "width": "100%",
          },
        ]
      }
      vbHeight={144}
      vbWidth={163}
      width="100%"
    >
      <RNSVGGroup>
        <RNSVGRect
          clipPath="loan-animated-diff"
          fill={
            Array [
              1,
              "loan-diff",
            ]
          }
          height="100%"
          propList={
            Array [
              "fill",
            ]
          }
          width="100%"
          x="0"
          y="0"
        />
        <RNSVGDefs>
          <RNSVGClipPath
            name="loan-animated-diff"
          >
            <RNSVGRect
              height="14"
              rx="6"
              ry="6"
              width="90"
              x="48"
              y="24"
            />
            <RNSVGRect
              height="12"
              rx="5"
              ry="5"
              width="51"
              x="13"
              y="56"
            />
            <RNSVGRect
              height="12"
              rx="6"
              ry="6"
              width="96"
              x="13"
              y="75"
            />
            <RNSVGCircle
              cx="26"
              cy="31"
              r="13"
            />
            <RNSVGRect
              height="12"
              rx="6"
              ry="6"
              width="51"
              x="13"
              y="100"
            />
            <RNSVGRect
              height="12"
              rx="6"
              ry="6"
              width="96"
              x="13"
              y="118"
            />
          </RNSVGClipPath>
          <RNSVGLinearGradient
            gradient={
              Array [
                0,
                -1250325,
                0.5,
                -1,
                1,
                -1250325,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="loan-diff"
            x1="-100%"
            x2="0%"
            y1={0}
            y2={0}
          />
        </RNSVGDefs>
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    style={
      Array [
        Array [
          Object {
            "borderBottomLeftRadius": 4,
            "borderBottomRightRadius": 4,
            "borderTopLeftRadius": 4,
            "borderTopRightRadius": 4,
          },
          Object {
            "flexBasis": "47%",
          },
        ],
        Object {
          "backgroundColor": "rgba(255, 255, 255, 1)",
          "borderBottomColor": "rgba(229, 229, 229, 1)",
          "borderBottomWidth": 1,
          "borderLeftColor": "rgba(229, 229, 229, 1)",
          "borderLeftWidth": 1,
          "borderRightColor": "rgba(229, 229, 229, 1)",
          "borderRightWidth": 1,
          "borderTopColor": "rgba(229, 229, 229, 1)",
          "borderTopWidth": 1,
        },
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={144}
      bbWidth="100%"
      focusable={false}
      height={144}
      interval={0.25}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {},
          Object {
            "flex": 0,
            "height": 144,
            "width": "100%",
          },
        ]
      }
      vbHeight={144}
      vbWidth={163}
      width="100%"
    >
      <RNSVGGroup>
        <RNSVGRect
          clipPath="loan-animated-diff"
          fill={
            Array [
              1,
              "loan-diff",
            ]
          }
          height="100%"
          propList={
            Array [
              "fill",
            ]
          }
          width="100%"
          x="0"
          y="0"
        />
        <RNSVGDefs>
          <RNSVGClipPath
            name="loan-animated-diff"
          >
            <RNSVGRect
              height="14"
              rx="6"
              ry="6"
              width="90"
              x="48"
              y="24"
            />
            <RNSVGRect
              height="12"
              rx="5"
              ry="5"
              width="51"
              x="13"
              y="56"
            />
            <RNSVGRect
              height="12"
              rx="6"
              ry="6"
              width="96"
              x="13"
              y="75"
            />
            <RNSVGCircle
              cx="26"
              cy="31"
              r="13"
            />
            <RNSVGRect
              height="12"
              rx="6"
              ry="6"
              width="51"
              x="13"
              y="100"
            />
            <RNSVGRect
              height="12"
              rx="6"
              ry="6"
              width="96"
              x="13"
              y="118"
            />
          </RNSVGClipPath>
          <RNSVGLinearGradient
            gradient={
              Array [
                0,
                -1250325,
                0.5,
                -1,
                1,
                -1250325,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="loan-diff"
            x1="-100%"
            x2="0%"
            y1={0}
            y2={0}
          />
        </RNSVGDefs>
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`Skeleton Loader should match snapshot of mnemonic word skeleton loader 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
        "paddingBottom": 8,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 8,
        "width": "100%",
      },
      Object {
        "backgroundColor": "rgba(255, 255, 255, 1)",
        "borderBottomColor": "rgba(229, 229, 229, 1)",
        "borderBottomWidth": 1,
        "borderLeftColor": "rgba(229, 229, 229, 1)",
        "borderRightColor": "rgba(229, 229, 229, 1)",
        "borderTopColor": "rgba(229, 229, 229, 1)",
      },
    ]
  }
  testID="mnemonic_word_skeleton_loader"
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={47}
    bbWidth="100%"
    focusable={false}
    height={47}
    interval={0.25}
    meetOrSlice={1}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        Object {},
        Object {
          "flex": 0,
          "height": 47,
          "width": "100%",
        },
      ]
    }
    vbHeight={47}
    vbWidth={400}
    width="100%"
  >
    <RNSVGGroup>
      <RNSVGRect
        clipPath="mnemonic_word-animated-diff"
        fill={
          Array [
            1,
            "mnemonic_word-diff",
          ]
        }
        height="100%"
        propList={
          Array [
            "fill",
          ]
        }
        width="100%"
        x="0"
        y="0"
      />
      <RNSVGDefs>
        <RNSVGClipPath
          name="mnemonic_word-animated-diff"
        >
          <RNSVGRect
            height="33"
            rx="3"
            ry="3"
            width="290"
            x="70"
            y="3"
          />
          <RNSVGCircle
            cx="20"
            cy="20"
            matrix={
              Array [
                1,
                0,
                -0,
                1,
                20,
                0,
              ]
            }
            r="20"
          />
        </RNSVGClipPath>
        <RNSVGLinearGradient
          gradient={
            Array [
              0,
              -1250325,
              0.5,
              -1,
              1,
              -1250325,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="mnemonic_word-diff"
          x1="-100%"
          x2="0%"
          y1={0}
          y2={0}
        />
      </RNSVGDefs>
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`Skeleton Loader should match snapshot of transaction skeleton loader 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
        "paddingBottom": 8,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 8,
        "width": "100%",
      },
      Object {
        "backgroundColor": "rgba(255, 255, 255, 1)",
        "borderBottomColor": "rgba(229, 229, 229, 1)",
        "borderBottomWidth": 1,
        "borderLeftColor": "rgba(229, 229, 229, 1)",
        "borderRightColor": "rgba(229, 229, 229, 1)",
        "borderTopColor": "rgba(229, 229, 229, 1)",
      },
    ]
  }
  testID="transaction_skeleton_loader"
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={47}
    bbWidth="100%"
    focusable={false}
    height={47}
    interval={0.25}
    meetOrSlice={1}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        Object {},
        Object {
          "flex": 0,
          "height": 47,
          "width": "100%",
        },
      ]
    }
    vbHeight={47}
    vbWidth={344}
    width="100%"
  >
    <RNSVGGroup>
      <RNSVGRect
        clipPath="transaction-animated-diff"
        fill={
          Array [
            1,
            "transaction-diff",
          ]
        }
        height="100%"
        propList={
          Array [
            "fill",
          ]
        }
        width="100%"
        x="0"
        y="0"
      />
      <RNSVGDefs>
        <RNSVGClipPath
          name="transaction-animated-diff"
        >
          <RNSVGCircle
            cx="17"
            cy="23"
            r="10"
          />
          <RNSVGRect
            height="15"
            width="100"
            x="44"
            y="7"
          />
          <RNSVGRect
            height="10"
            width="100"
            x="44"
            y="29"
          />
          <RNSVGRect
            height="15"
            width="85"
            x="250"
            y="16"
          />
        </RNSVGClipPath>
        <RNSVGLinearGradient
          gradient={
            Array [
              0,
              -1250325,
              0.5,
              -1,
              1,
              -1250325,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="transaction-diff"
          x1="-100%"
          x2="0%"
          y1={0}
          y2={0}
        />
      </RNSVGDefs>
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`Skeleton Loader should match snapshot of vault keleton loader 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
        "marginLeft": 16,
        "marginRight": 16,
        "marginTop": 8,
        "paddingBottom": 16,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 16,
      },
      Object {
        "backgroundColor": "rgba(255, 255, 255, 1)",
        "borderBottomColor": "rgba(229, 229, 229, 1)",
        "borderBottomWidth": 1,
        "borderLeftColor": "rgba(229, 229, 229, 1)",
        "borderLeftWidth": 1,
        "borderRightColor": "rgba(229, 229, 229, 1)",
        "borderRightWidth": 1,
        "borderTopColor": "rgba(229, 229, 229, 1)",
        "borderTopWidth": 1,
      },
    ]
  }
  testID="vault_skeleton_loader"
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={130}
    bbWidth="100%"
    focusable={false}
    height={130}
    interval={0.25}
    meetOrSlice={1}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        Object {},
        Object {
          "flex": 0,
          "height": 130,
          "width": "100%",
        },
      ]
    }
    vbHeight={130}
    vbWidth={328}
    width="100%"
  >
    <RNSVGGroup>
      <RNSVGRect
        clipPath="vault-animated-diff"
        fill={
          Array [
            1,
            "vault-diff",
          ]
        }
        height="100%"
        propList={
          Array [
            "fill",
          ]
        }
        width="100%"
        x="0"
        y="0"
      />
      <RNSVGDefs>
        <RNSVGClipPath
          name="vault-animated-diff"
        >
          <RNSVGRect
            height="16"
            width="60"
            x="0"
            y="13"
          />
          <RNSVGRect
            height="16"
            width="60"
            x="70"
            y="13"
          />
          <RNSVGRect
            height="16"
            width="240"
            x="0"
            y="33"
          />
          <RNSVGRect
            height="15"
            width="150"
            x="0"
            y="53"
          />
          <RNSVGRect
            height="15"
            width="130"
            x="0"
            y="90"
          />
          <RNSVGRect
            height="15"
            width="140"
            x="220"
            y="90"
          />
          <RNSVGRect
            height="15"
            width="130"
            x="0"
            y="115"
          />
          <RNSVGRect
            height="15"
            width="140"
            x="220"
            y="115"
          />
        </RNSVGClipPath>
        <RNSVGLinearGradient
          gradient={
            Array [
              0,
              -1250325,
              0.5,
              -1,
              1,
              -1250325,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="vault-diff"
          x1="-100%"
          x2="0%"
          y1={0}
          y2={0}
        />
      </RNSVGDefs>
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;
